objects/ASI_CRM_Order_Form_Customer_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Order_From_Customer_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Form_Type__c</fullName>
        <formula>IF(ISPICKVAL(ASI_CRM_Order_Form__r.ASI_CRM_Order_Form_Type__c, &quot;Normal Item&quot;), &quot;Normal Item&quot;, IF(ISPICKVAL(ASI_CRM_Order_Form__r.ASI_CRM_Order_Form_Type__c, &quot;RTD&quot;), &quot;RTD&quot;, &quot;Premium&quot;))</formula>
        <label>Order Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Form__c</fullName>
        <label>Order Form</label>
        <referenceTo>ASI_CRM_Order_Form__c</referenceTo>
        <relationshipLabel>Order Form Customer Relationships</relationshipLabel>
        <relationshipName>Order_From_Customer_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Order Form Customer Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Order_Form_Type__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Order_Form__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Order_Form_Customer_Relationship__c.ASI_CRM_CN_Order_Form_Customer_Relationship</value>
        </filters>
        <filters>
            <field>ASI_CRM_Customer__c</field>
            <operation>contains</operation>
            <value>WSSHA357</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OFCR-{0000000}</displayFormat>
        <label>Order From Customer Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Form Customer Relationships</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Order_Form_Customer_Relationship</fullName>
        <active>true</active>
        <label>CN Order Form Customer Relationship</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>